--- a/Add New Words/Add New Words.vcxproj.filters
+++ b/Add New Words/Add New Words.vcxproj.filters
@@ -19,4 +19,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="add_new_words.exe" />
+  </ItemGroup>
 </Project>
